--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -93,6 +93,7 @@ input[type="range"] {
 
 
 //mark tag
+/*
 mark {
 	position:relative; z-index:1;
 	color:#444; background:fade(red, 10%);
@@ -103,6 +104,7 @@ mark {
 		content:"";
 	}
 }
+*/
 
 
 //responsive display
@@ -164,7 +166,7 @@ mark {
 	.CodeMirror {height:auto;}
 	.CodeMirror-line * {display:inline-block; vertical-align:top;}
 	&[data-result="true"]{
-		.CodeMirror-scroll {min-height:320px; max-height:628px;}
+		.CodeMirror-scroll {min-height:320px; max-height:528px;}
 		.code_wrap, .result_wrap {position:relative; width:50%;}
 		.result_wrap {
 			position:absolute; right:0; top:0; overflow:hidden;
