--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -1875,7 +1875,7 @@
 			&:before {display:block; height:1px; content:"";}
 		}
 		.common_info, .top_info {
-			line-height:22px;
+			line-height:24px;
 			font-size:14px; color:#666; font-weight:400;
 			letter-spacing:-0.2px;
 		}
@@ -1887,7 +1887,7 @@
 				position:relative;
 				padding-left:10px; color:#444;
 				&:before {
-					position:absolute; left:0; top:10px;
+					position:absolute; left:0; top:11px;
 					width:3px; height:3px;
 					font-weight:bold;
 					background:#777; border-radius:100%;
@@ -1897,13 +1897,15 @@
 			}
 		}
 		.uk_note {
+			display:inline-block;
 			text-align:left;
-			line-height:22px; margin-top:15px;
+			line-height:24px; margin:15px @pc_padding 0;
+			font-size:14px;
 			border:0;
 			li {
 				position:relative; padding-left:12px;
 				&:before {
-					position:absolute; left:0; top:9px;
+					position:absolute; left:0; top:11px;
 					width:3px; height:3px;
 					background:#4b6da5; border-radius:100%;
 					content:"";
@@ -1960,18 +1962,7 @@
 					}
 				}
 			}
-			.inner.note_none {display:none;}
-			.inner {margin-top:0;}
-			.common_info, .top_info {display:none;}
-			.uk_note {
-				position:relative; z-index:2;
-				line-height:20px; margin:-3px -10px 0; padding:0 0 10px;
-				font-size:13px;
-				background:#fff; border-bottom:1px solid #eee;
-				ul {padding:10px; background:#f9f9f9;}
-				li {padding-left:10px;}
-				li:before {top:8px;}
-			}
+			.inner, .uk_note {display:none;}
 		}
 	}
 
@@ -2206,7 +2197,7 @@
 				background:#f5f5f5; border-radius:0;
 			}
 			h2 {
-				float:none; line-height:@h2_h; padding-bottom:@h2_h;
+				float:none; line-height:@h2_h;
 				font-size:18px;
 			}
 			h2.html5:after {margin:0 0 0 6px; font-size:16px;}
@@ -2270,16 +2261,16 @@
 		&.ex_code .ve_tit {color:@green;}
 		&.ex_code.ex_wrong .ve_tit {color:@red;}
 		&.edit_code .ve_tit {color:@blue;}
-		.uk_editor {margin-top:10px;}
+		.uk_editor {margin-top:15px;}
 	}
 	@media(max-width:@screen-sm-max){
 		.view_editor {
 			.ve_tit {
 				line-height:17px;
-				font-size:14px;
+				font-size:16px;
 				&:before {margin:0 6px 0 0;}
 			}
-			.uk_editor {margin-top:10px;}
+			.uk_editor {margin-top:15px;}
 		}
 	}
 
@@ -2392,12 +2383,16 @@
 	.mt_m {margin-top:20px;}
 	.mt_s {margin-top:10px;}
 	.mt_sm {margin-top:5px;}
+	.ml_mn {margin-left:-25px;}
 	.indent {margin-left:25px;}
+	.indent_max {margin-left:50px;}
 	.t_blue {color:@blue;}
 	.break_all {word-break:break-all;}
 	@media(max-width:@screen-sm-max){
-		.indent {margin-left:8px;}
 		.mt_lm {margin-top:30px;}
+		.ml_mn {margin-left:-8px;}
+		.indent {margin-left:8px;}
+		.indent_max {margin-left:16px;}
 	}
 
 
