- uk editor 디버깅

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2359,6 +2359,7 @@
 		a {
 			line-height:@line-height;
 			.font-kr; color:#666; text-decoration:underline; font-weight:400;
+			word-break:break-all;
 			&:after {
 				display:inline-block; vertical-align:top;
 				margin-left:5px;
