- 전체 수정 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -8,7 +8,10 @@
 .font-tit2 {font-family:'Cinzel Decorative', cursive;}
 .font-logo {font-family:'Jura', sans-serif;}
 .font-icon {font-family:"Font Awesome 5 Free", sans-serif;}
-.font-icon2 {font-family: "Font Awesome 5 Brands", sans-serif;}
+.font-icon2 {font-family:"Font Awesome 5 Brands", sans-serif;}
+
+.font-code {font-family:'Courgette', cursive;}
+.font-code2 {font-family:'Exo', sans-serif;}
 
 
 //media size
@@ -90,6 +93,8 @@ input[type="range"] {
 	&::-moz-range-thumb {width:26px; height:26px; margin-top:-10px; background:@white; border:2px solid @gray; border-radius:100%;}
 	&::-ms-thumb {width:26px; height:26px; margin-top:0; background:@white; border:2px solid @gray; border-radius:100%;}
 }
+
+
 
 
 //mark tag
