- 컨텐츠 수정 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -10,8 +10,8 @@
 .font-icon {font-family:"Font Awesome 5 Free", sans-serif;}
 .font-icon2 {font-family:"Font Awesome 5 Brands", sans-serif;}
 
-.font-code {font-family:'Courgette', cursive;}
-.font-code2 {font-family:'Exo', sans-serif;}
+//.font-code {font-family:'Courgette', cursive;}
+.font-code {font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
 
 
 //media size
