q~time 엘리먼트 컨텐츠 적용

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2168,6 +2168,7 @@
 			background:#eee;
 		}
 		mark code {background:none;}
+		strong code {font-weight:bold;}
 
 		h1 {line-height:32px; font-size:28px; color:@navy; letter-spacing:-1px;}
 		h1:before {content:attr(data-number);}
